--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -111,7 +111,7 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QTextEdit" name="timerTextEdit">
+           <widget class="QTextEdit" name="timerLEdit">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
               <horstretch>0</horstretch>
@@ -135,6 +135,13 @@
             </property>
             <property name="whatsThis">
              <string>Definir periodo de execução</string>
+            </property>
+            <property name="html">
+             <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.Lucida Grande UI'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
            </widget>
           </item>
@@ -195,7 +202,7 @@
             <x>50</x>
             <y>60</y>
             <width>160</width>
-            <height>80</height>
+            <height>81</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_2">
@@ -259,8 +266,6 @@
      </layout>
     </item>
    </layout>
-   <zorder>formLayoutWidget</zorder>
-   <zorder>verticalLayoutWidget</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -268,7 +273,7 @@
      <x>0</x>
      <y>0</y>
      <width>631</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuPSSimulator">
@@ -300,7 +305,7 @@
  <tabstops>
   <tabstop>dirTextEdit</tabstop>
   <tabstop>dirToolButton</tabstop>
-  <tabstop>timerTextEdit</tabstop>
+  <tabstop>timerLEdit</tabstop>
  </tabstops>
  <resources/>
  <connections/>
